# forecasting

./: .gitignore  README.md  check_env.py  generate_report.py  main.py  models_config.json  pyproject.toml  requirements.txt  run_experiments.py
config/: datasets_config.json  main_config.yaml  model_params.yaml
scritps/: clean_venv.sh  generate_report.sh  run_experiment.sh  setup_venv.sh
src/: data_processing.py  main.py  models.py  reporting.py
src/analysis/: comparison_tests.py  statistical_tests.py
src/data_management/: data_loader.py  downloader.py  preprocessing.py  preprocessor.py
src/evaluation/: diagnostics.py  reporter.py  statistical_tests.py
src/modeling/: deep_learning.py  utils.py
src/models/: arima_model.py  deep_learning.py  deep_learning_model.py  ets_model.py  statistical.py  utils.py
src/pipelines/: evaluate_pipeline.py  evaluator.py  train_pipeline.py  trainer.py
src/preparation/: data_loader.py  preprocessor.py
src/reporting/: data_loader.py  reporter.py  statistics.py  tables.py  visualizer.py
src/utils/: config_loader.py  experiment_manager.py
src/visualization/: plotter.py
