[tool.poetry]
name = "forecasting-pipeline"
version = "0.1.0"
description = "Time Series Forecasting Experiment"
authors = ["Flávio Monteiro"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

torch = { url = "https://download.pytorch.org/whl/cpu/torch-2.2.2%2Bcpu-cp311-cp311-linux_x86_64.whl" }

numpy = "1.26.4"
pandas = "2.2.2"
scipy = "1.13.1"
joblib = "1.4.2"
PyYAML = "6.0.1"
scikit-posthocs = "*"
pingouin = "*"
scikit-learn = "1.5.0"
statsmodels = "0.14.2"
pmdarima = "2.0.4"
statsforecast = "1.7.5"
neuralforecast = "1.7.2"
tensorflow = "2.16.1"
numba = "0.59.1"
optuna = "*"
matplotlib = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
